manifests/istio/httproute-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: monitoring-grafana
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
