manifests/istio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: combined-routes
  namespace: istio-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: monitoring-grafana
          namespace: monitoring
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - name: monitoring-kube-prometheus-prometheus
          namespace: monitoring
          port: 9090

    - matches:
        - path:
            type: PathPrefix
            value: /app
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: test-app-svc
          namespace: default
          port: 80
