manifests/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: combined-routes
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80

  # Grafana
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: monitoring-grafana.monitoring.svc.cluster.local 
        port:
          number: 80

  # Prometheus
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090

  # Тестовое приложение 
  - match:
    - uri:
        prefix: /app
    rewrite:
      uri: /
    route:
    - destination:
        host: test-app-svc.default.svc.cluster.local
        port:
          number: 80
